fixed navbar variable values and updated navbar item spacing

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -1,6 +1,5 @@
 @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 
-/* Universal box-sizing */
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -52,7 +51,7 @@ html {
   --nav-item-font-size: var(--font-size-medium);
   --nav-item-letter-spacing: 4%;
   --nav-item-display: inline-block;
-  --nav-item-margin: 3rem 0 0 0;
+  --nav-item-margin: 0 0 3rem 0;
   --nav-item-link-hover: var(--color-primary);
 }
 
